objects/BP_Involvement__c.object
<CustomObject><fields>
        <fullName>AFPEmailSent__c</fullName>
        <label>AFP Email Sent</label>
        <type>Date</type>
    </fields><fields>
        <fullName>ApplicationP1Completed__c</fullName>
        <formula>Application__r.P1Completed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Submitted</label>
        <type>Date</type>
    </fields><fields>
        <fullName>ApplicationP2Completed__c</fullName>
        <formula>Application__r.P2Completed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application P2 Completed</label>
        <type>Date</type>
    </fields><fields>
        <fullName>ApplicationStatus__c</fullName>
        <formula>text(Application__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Status</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>BP_Application__c</referenceTo>
        <relationshipLabel>Involvement</relationshipLabel>
        <relationshipName>BP_Involvement</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ApproverAdmissions__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - Admissions</label>
        <referenceTo>User</referenceTo>
        <relationshipName>InvolvementApproverAdmissions</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ApproverBaseLeadership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - Base Leadership</label>
        <referenceTo>User</referenceTo>
        <relationshipName>InvolvementApproverBaseLeadership</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ApproverSchoolLeader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - School Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>InvolvementApproverSchoolLeader</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ArrivalAirline__c</fullName>
        <label>Arrival Airline</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ArrivalAirportStationOther__c</fullName>
        <label>Arrival Airport/Station Other</label>
        <length>150</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ArrivalAirportStation__c</fullName>
        <label>Arrival Airport/Station</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Geneva (GVA)</fullName>
                </value>
                <value>
                    <fullName>Lausanne Train Station</fullName>
                </value>
                <value>
                    <fullName>Zurich (ZHR)</fullName>
                </value>
                <value>
                    <fullName>Basel (BSL)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>ArrivalDate__c</fullName>
        <label>Arrival Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>ArrivalFlightDetailsGoogle__c</fullName>
        <formula>HYPERLINK("https://www.google.com?#q=Flight: " &amp; text(day(ArrivalDate__c)) &amp; "/" &amp; text(month(ArrivalDate__c)) &amp; "/" &amp; text(year(ArrivalDate__c)) &amp; " " &amp; ArrivalAirline__c &amp; " " &amp; ArrivalFlightNumber__c, "Search for Flight Information", "_blank")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Arrival Flight Details (Google)</label>
        <type>Text</type>
    </fields><fields>
        <fullName>ArrivalFlightNumber__c</fullName>
        <label>Arrival Flight Number</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ArrivalMode__c</fullName>
        <label>Arrival Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Plane</fullName>
                </value>
                <value>
                    <fullName>Train</fullName>
                </value>
                <value>
                    <fullName>Car</fullName>
                </value>
                <value>
                    <fullName>Personal Transportation</fullName>
                </value>
                <value>
                    <fullName>Already Here</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>ArrivalNotes__c</fullName>
        <label>Arrival Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>ArrivalStatus__c</fullName>
        <label>Arrival Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Will Call With Time</fullName>
                </value>
                <value>
                    <fullName>Already Here - No Pick Up Needed</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>ArrivalTime__c</fullName>
        <label>Arrival Time</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>CalculatedCourseCode__c</fullName>
        <formula>CourseEvent__r.CalculatedCourseCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Course Code</label>
        <type>Text</type>
    </fields><fields>
        <fullName>ContactEmailAutoUpdate__c</fullName>
        <label>Contact Email (Auto Update)</label>
        <type>Email</type>
    </fields><fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Involvement</relationshipLabel>
        <relationshipName>BP_Involvement</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>CourseArrivalDate__c</fullName>
        <formula>CourseEvent__r.ArrivalDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Arrival Date</label>
        <type>Text</type>
    </fields><fields>
        <fullName>CourseDepartureDate__c</fullName>
        <formula>CourseEvent__r.DepartureDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Departure Date</label>
        <type>Text</type>
    </fields><fields>
        <fullName>CourseEndDate__c</fullName>
        <formula>CourseEvent__r.EndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course End Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>CourseEvent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course/Event</label>
        <referenceTo>BP_CourseEventOutreach__c</referenceTo>
        <relationshipLabel>Involvement (Course/Event)</relationshipLabel>
        <relationshipName>InvolvementCourseEvent</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>CourseOutreachRecordType__c</fullName>
        <formula>CourseEvent__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course/Outreach Record Type</label>
        <type>Text</type>
    </fields><fields>
        <fullName>CourseStartDate__c</fullName>
        <formula>CourseEvent__r.StartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Start Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>DepositPaid__c</fullName>
        <label>Deposit Paid</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Deposit__c</fullName>
        <formula>CourseEvent__r.Deposit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deposit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>FIP__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Finances in Process. Person does not have full lecture phase fees.</inlineHelpText>
        <label>FIP</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>FriendReferenceStatus__c</fullName>
        <formula>text(Application__r.FriendReferenceStatus__c)</formula>
        <label>Friend Reference Status</label>
        <type>Text</type>
    </fields><fields>
        <fullName>HousingPlan__c</fullName>
        <label>Housing Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Canaan Apt.</fullName>
                </value>
                <value>
                    <fullName>Canaan House Shared</fullName>
                </value>
                <value>
                    <fullName>Canaan House Single</fullName>
                </value>
                <value>
                    <fullName>Chalet Shared</fullName>
                </value>
                <value>
                    <fullName>Chalet Single</fullName>
                </value>
                <value>
                    <fullName>Rte de Berne Apt. 23</fullName>
                </value>
                <value>
                    <fullName>Rte de Berne Apt. 24</fullName>
                </value>
                <value>
                    <fullName>CM A</fullName>
                </value>
                <value>
                    <fullName>CM B</fullName>
                </value>
                <value>
                    <fullName>CM C</fullName>
                </value>
                <value>
                    <fullName>Cojonnex Apt.</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Outreach</fullName>
                </value>
                <value>
                    <fullName>Private Apt.</fullName>
                </value>
                <value>
                    <fullName>PTT Apartment</fullName>
                </value>
                <value>
                    <fullName>Vuillette Apt.</fullName>
                </value>
                <value>
                    <fullName>Vuillette Studio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>LatestSalaryAmountAutoUpdate__c</fullName>
        <label>Latest Salary Amount (Auto Update)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>LatestSalaryMontAutoUpdate__c</fullName>
        <label>Latest Salary Month (Auto Update)</label>
        <length>30</length>
        <type>Text</type>
    </fields><fields>
        <fullName>LatestSalaryYearAutoUpdate__c</fullName>
        <label>Latest Salary Year (Auto Update)</label>
        <length>30</length>
        <type>Text</type>
    </fields><fields>
        <fullName>LausanneMobilePhone__c</fullName>
        <label>Lausanne Mobile Phone</label>
        <type>Phone</type>
    </fields><fields>
        <fullName>LeaderReferenceStatus__c</fullName>
        <formula>text(Application__r.LeaderReferenceStatus__c)</formula>
        <label>Leader Reference Status</label>
        <type>Text</type>
    </fields><fields>
        <fullName>ManuallySendSalaryDeclaration__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you check this box the contact attached to this involvement will immediately get the salary declaration email</inlineHelpText>
        <label>Manually Send Salary Declaration</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>MealPlan__c</fullName>
        <label>Meal Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Meals</fullName>
                </value>
                <value>
                    <fullName>Plan A - all meals</fullName>
                </value>
                <value>
                    <fullName>Plan B - all meals weekdays &amp; breakfast weekends</fullName>
                </value>
                <value>
                    <fullName>Plan C - lunch &amp; dinner weekdays</fullName>
                </value>
                <value>
                    <fullName>Plan D - lunch weekdays</fullName>
                </value>
                <value>
                    <fullName>Plan E - lunch and/or dinner on same day/days every week</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>MonthlySalaryDeclarationSendDate__c</fullName>
        <label>Monthly Salary Declaration Send Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>OldOpportunityId__c</fullName>
        <externalId>true</externalId>
        <label>Old Opportunity Id</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>OnlineApplicationLanguage__c</fullName>
        <formula>Contact__r.OnlineApplicationLanguage__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Online Application Language</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Outreach__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outreach</label>
        <referenceTo>BP_CourseEventOutreach__c</referenceTo>
        <relationshipLabel>Involvement (Outreach)</relationshipLabel>
        <relationshipName>InvolvementOutreach</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>PersonalDetails__c</fullName>
        <formula>"Nationality: " + Contact__r.NationalityPrimary__r.Name + " | Age: " +  TEXT(Contact__r.Age__c) + " | Gender: " + TEXT(Contact__r.Gender__c) + " |  Marital Status: " +  TEXT(Contact__r.Marital_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Personal Details</label>
        <type>Text</type>
    </fields><fields>
        <fullName>PickUpDateAndTime__c</fullName>
        <label>Pick Up Date and Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>PickUpLocation__c</fullName>
        <label>Pick Up Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lausanne Train Station</fullName>
                </value>
                <value>
                    <fullName>Geneva Airport (GVA)</fullName>
                </value>
                <value>
                    <fullName>Lausanne Guesthouse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>PresentRole__c</fullName>
        <label>Present Role</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Q1Role__c</fullName>
        <label>Q1 Role</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Q1Team__c</fullName>
        <label>Q1 Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Community Life</fullName>
                </value>
                <value>
                    <fullName>Compassion</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>GENESIS</fullName>
                </value>
                <value>
                    <fullName>Mission-Builder</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Personnel</fullName>
                </value>
                <value>
                    <fullName>Program</fullName>
                </value>
                <value>
                    <fullName>School Staff</fullName>
                </value>
                <value>
                    <fullName>Short term Staff</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>TBC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Q2Role__c</fullName>
        <label>Q2 Role</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Q2Team__c</fullName>
        <label>Q2 Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Community Life</fullName>
                </value>
                <value>
                    <fullName>Compassion</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>GENESIS</fullName>
                </value>
                <value>
                    <fullName>Mission-Builder</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Personnel</fullName>
                </value>
                <value>
                    <fullName>Program</fullName>
                </value>
                <value>
                    <fullName>School Staff</fullName>
                </value>
                <value>
                    <fullName>Short term Staff</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>TBC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Q3Role__c</fullName>
        <label>Q3 Role</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Q3Team__c</fullName>
        <label>Q3 Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Community Life</fullName>
                </value>
                <value>
                    <fullName>Compassion</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>GENESIS</fullName>
                </value>
                <value>
                    <fullName>Mission-Builder</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Personnel</fullName>
                </value>
                <value>
                    <fullName>Program</fullName>
                </value>
                <value>
                    <fullName>School Staff</fullName>
                </value>
                <value>
                    <fullName>Short term Staff</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>TBC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>RegistrationDayConfirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Registration Day Confirmation</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>RoomNumber__c</fullName>
        <label>Room Number</label>
        <length>55</length>
        <type>Text</type>
    </fields><fields>
        <fullName>SeminarLetterSent__c</fullName>
        <label>Seminar Letter Sent</label>
        <type>Date</type>
    </fields><fields>
        <fullName>StaffEndDate__c</fullName>
        <label>Staff End Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>StaffStartDate__c</fullName>
        <label>Staff Start Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                    <default>true</default>
                    <label>Incomplete</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>FIP</fullName>
                </value>
                <value>
                    <fullName>AFP</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>7a - Current Staff</fullName>
                </value>
                <value>
                    <fullName>7c - Current Mission Builder</fullName>
                </value>
                <value>
                    <fullName>7d - Traveling Staff</fullName>
                </value>
                <value>
                    <fullName>7e - Attending School</fullName>
                </value>
                <value>
                    <fullName>7f - On Outreach</fullName>
                </value>
                <value>
                    <fullName>8a - Staff Child</fullName>
                </value>
                <value>
                    <fullName>9a - Past Staff</fullName>
                </value>
                <value>
                    <fullName>9b - Past Mission Builder</fullName>
                </value>
                <value>
                    <fullName>9c - Past Staff Child</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>TeacherEmployerReferenceStatus__c</fullName>
        <formula>text(Application__r.TeacherEmpRefStatus__c)</formula>
        <label>Teacher/Employer Reference Status</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Community Life</fullName>
                </value>
                <value>
                    <fullName>Compassion</fullName>
                </value>
                <value>
                    <fullName>GENESIS</fullName>
                </value>
                <value>
                    <fullName>Mission-Builder</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Personnel</fullName>
                </value>
                <value>
                    <fullName>Program</fullName>
                </value>
                <value>
                    <fullName>School Staff</fullName>
                </value>
                <value>
                    <fullName>Short term Staff</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>TBC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>TrackDegree__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Track / Degree</label>
        <referenceTo>BP_TracksDegrees__c</referenceTo>
        <relationshipLabel>Involvement</relationshipLabel>
        <relationshipName>Involvement</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>VisaExpiryDate__c</fullName>
        <formula>VisasAndPermits__r.ExpirationDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visa Expiry Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>VisaInfoSent__c</fullName>
        <label>Visa Info Sent</label>
        <type>Date</type>
    </fields><fields>
        <fullName>VisaLetterSentToEmbassy__c</fullName>
        <label>Visa Letter Sent to Embassy</label>
        <type>Date</type>
    </fields><fields>
        <fullName>VisaStatus__c</fullName>
        <formula>TEXT(VisasAndPermits__r.VisaStatus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visa Status</label>
        <type>Text</type>
    </fields><fields>
        <fullName>VisaTypeAutoUpdate__c</fullName>
        <label>Visa Type (Auto Update)</label>
        <length>40</length>
        <type>Text</type>
    </fields><fields>
        <fullName>VisaType__c</fullName>
        <formula>text(VisasAndPermits__r.VisaPermitType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visa Type</label>
        <type>Text</type>
    </fields><fields>
        <fullName>VisasAndPermits__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visas and Permits</label>
        <referenceTo>VisasAndPermits__c</referenceTo>
        <relationshipLabel>Involvement</relationshipLabel>
        <relationshipName>Involvement</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>XrefId__c</fullName>
        <externalId>true</externalId>
        <label>XrefId</label>
        <length>30</length>
        <type>Text</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Replacement for Oportunities</description><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>true</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Involvement</label><nameField>
        <label>Involvement</label>
        <type>Text</type>
    </nameField><pluralLabel>Involvement</pluralLabel><recordTypeTrackFeedHistory>false</recordTypeTrackFeedHistory><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>ControlledByParent</sharingModel><visibility>Public</visibility><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Application__c</columns>
        <columns>CalculatedCourseCode__c</columns>
        <columns>ArrivalStatus__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><listViews>
        <fullName>Current_Students</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CourseEvent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Accepted</value>
        </filters>
        <filters>
            <field>CourseEvent__c</field>
            <operation>contains</operation>
            <value>2017Q2</value>
        </filters>
        <label>Current Students</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>YWAMLausanneStaffCurrent</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>PresentRole__c</columns>
        <columns>MealPlan__c</columns>
        <columns>HousingPlan__c</columns>
        <columns>LausanneMobilePhone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>7a - Current Staff,7c - Current Mission Builder,7e - Attending School</value>
        </filters>
        <label>YWAM Lausanne Staff - Current</label>
        <language>en_US</language>
    </listViews><recordTypes>
        <fullName>Staff</fullName>
        <active>true</active>
        <label>Staff</label>
    </recordTypes><recordTypes>
        <fullName>Student</fullName>
        <active>true</active>
        <label>Student</label>
    </recordTypes></CustomObject>